crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_tests_indent_start.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
UNFINISHED TESTS

  × I started parsing a tests section, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Add an indented `test` or `prop` declaration. Test imports must come before the
        declarations.
