crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_tests_space.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "tests\t"
---
nash::syntax

  × Tabs are not allowed.
   ╭─[src/Main.nash:1:6]
 1 │ tests   
   ·      ───
   ╰────
  help: Replace the tab with spaces.
