crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_tests_start.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: tests 1
---
nash::syntax

  × Expected a test or property declaration.
   ╭─[src/Main.nash:1:7]
 1 │ tests 1
   ·       ─
   ╰────
  help: Indent `test` or `prop` beneath `tests`; put test imports first.
