crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_tests_test.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "tests\n    test 1"
---
nash::syntax

  × Expected a quoted test name.
   ╭─[src/Main.nash:2:10]
 1 │ tests
 2 │     test 1
   ·          ─
   ╰────
  help: Give the test a name in double quotes.
