crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_trait_alignment.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Trait methods must align.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Start each method in column 3.
