crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_trait_indent_colon.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
MISSING METHOD COLON

  × I was parsing a trait declaration, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Add a colon between the method name and its type annotation.
