crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_trait_indent_method.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::diagnostic

  × I was parsing a trait declaration, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: I was expecting an indented method signature, such as `show : 'a -> string`.
