crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_trait_indent_name.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "trait\nEq"
---
nash::syntax

  × Expected a trait name.
   ╭─[src/Main.nash:2:1]
 1 │ trait
 2 │ Eq
   · ─
   ╰────
  help: Use an uppercase name, such as `Eq`.
