crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_trait_indent_type.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "trait Eq 'a where\n    equal :\nint"
---
nash::syntax

  × Expected a method type after `:`.
   ╭─[src/Main.nash:3:1]
 1 │ trait Eq 'a where
 2 │     equal :
 3 │ int
   · ─
   ╰────
  help: Indent the type farther than the method name.
